--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/svg+xml" href="/app-asistencia/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/app-asistencia/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/app-asistencia/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/app-asistencia/favicon-16x16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#4F46E5">
     <meta name="description" content="Sistema de Control de Asistencia">
@@ -14,5 +14,20 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+        <script>
+          if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+              navigator.serviceWorker.register('/app-asistencia/sw.js')
+                .then(registration => {
+                  console.log('ServiceWorker registration successful');
+                })
+                .catch(err => {
+                  console.log('ServiceWorker registration failed: ', err);
+                });
+            });
+          }
+        </script>
+      </body>
+    </html>
   </body>
 </html>
